Fixed alignment of milkdown editor in windowed mode

--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -289,7 +289,7 @@ label {
     #editor .milkdown .editor {
         padding: 0px 0px;
         position: fixed;
-        width: 70%;
+        width: 70.8%;
         margin-left: 350px;
         top: 50%;
         -webkit-transform: translate(-50%, -50%);
